fix size of buttons on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -1166,7 +1166,7 @@ img {
     z-index: 9000;
   }
   .footer-link {
-    font-size: 168%;
+    font-size: 197%;
     right: 4.8%;
     bottom: 2.4%;
     letter-spacing: -0.001em;
@@ -1174,8 +1174,8 @@ img {
     border-radius: 50%;
     letter-spacing: -12.1px;
     letter-spacing: 0.2em;
-    width: 50px;
-    height: 50px;
+    width: 54px;
+    height: 54px;
     padding: 3px 10px 0px 10px;
 
     /*glassmorphism*/
